# luminiferous-theremin

./: CMakeLists.txt  LICENSE  README.md  distarray.py  flash.c  ledline.c  mapping.c  midi.c  midi.h  neopixel.c  python.md  settings.h  theremin.c  theremin.uf2  ws2812.pio
Circuit/: readme.md
VL53L0X/: CMakeLists.txt  tof.c  tof.h  vl53l0x.c  vl53l0x.h
display/: CMakeLists.txt  assets.h  display.c  display.h  font8x8.h  telecow.h
python/: colourline.py  distarray.py  readme.md  waveshapes.py
sound/: CMakeLists.txt  MidiNotes.h  sound.c  sound.h  waveshapes.c  waveshapes.h
